2007-11-13  Mathias Hasselmann  <mathias@openismus.com>

	Do more restrictive argument checks in epc_dispatcher_add_service to
	work arround Avahi race conditions.

	* libepc/dispatcher.c: Do more restrictive argument checks in
	epc_dispatcher_add_service to work arround Avahi race conditions.
	* libepc/publisher.c, tests/test-dispatcher-subtypes.c:
	Use epc_dispatcher_add_service_subtype instead of
	epc_dispatcher_add_service to publish subtypes.
	* tests/framework.c, tests/framework.h:
	Rename epc_test_pass to epc_test_pass_once. Add epc_test_pass_many.
	* tests/*: Rename epc_test_pass to epc_test_pass_once.

2007-11-12  Mathias Hasselmann  <mathias@openismus.com>

	Fix several issues to make distcheck happy.

	* Makefile.am: Add BUILT_SOURCES and EXTRA_DIST files. Fix the
	reference manual's dist-hook. Fix some build-dir != source-dir issues.
	Properly clean up, and maybe work arround some automake bug.
	* docs/reference/libepc/Makefile.am: Correctly pass the multiple
	source dirs to gtk-doc.

2007-11-12  Mathias Hasselmann  <mathias@openismus.com>

	Add epc_password_dialog_attach for easy EpcPasswordDialog usage.

	* libepc-ui/password-dialog.c, libepc-ui/password-dialog.h,
	examples/test-consumer.c, docs/reference/libepc/libepc-sections.txt:
	Add and use epc_password_dialog_attach.

2007-11-12  Mathias Hasselmann  <mathias@openismus.com>

	Document libepc-ui widgets.

	* docs/reference/libepc/libepc-docs.xml: Add libepc-ui sections.
	* docs/reference/libepc/libepc-sections.txt: Add libepc-ui symbols.
	* docs/reference/libepc/Makefile.am: Add libepc-ui.
	* libepc-ui/entropy-window.c, libepc-ui/entropy-window.h:
	Add API documentation and rename EpcEntropyProgress to EpcEntropyWindow.
	* libepc-ui/password-dialog.c, libepc-ui/password-dialog.h: Add docs.
	* libepc/consumer.h, libepc/dispatcher.h, libepc/publisher.h:
	Add /*< public >*/ annotations to make gtk-doc happy.
	* libepc/protocol.c: Link to epc_service_type_new.